--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,19 +5,18 @@
   "customizations": {
     "vscode": {
       "extensions": [
-        // Other helpers
-        "shardulm94.trailing-spaces",
-        "stkb.rewrap", // rewrap comments after n characters on one line
+        // Other helpers for python
         "ms-python.python",
         "ms-python.vscode-pylance",
         "ms-python.black-formatter",
+        // pdf viewer to see plotted figures
         "tomoki1207.pdf"
       ],
       "settings": {
         // General settings
         "files.eol": "\n",
-        "rewrap.autoWrap.enabled": true,
-        "editor.formatOnSave": true
+        "editor.formatOnSave": true,
+        "python.defaultInterpreterPath": "/opt/venv"
       }
     }
   }
