Base docker image on official python

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,21 +1,14 @@
-FROM debian:trixie
-ENV DEBIAN_FRONTEND=noninteractive
-# Install apt packages here
-RUN apt-get update && apt-get install -y python3 \
-  python3-pip \
-  python3-venv \
-  black \
-  git && \
-  apt-get clean autoclean && \
-  apt-get autoremove
-# Configurations for virtual environment
+# Let's start from an official python docker image - feel free to update the tag
+# as needed.
+FROM python:3.13.6-trixie
+# Configurations for virtual environment, no need to activate, this is it :)
 ENV VIRTUAL_ENV=/opt/venv
 RUN python3 -m venv $VIRTUAL_ENV
 ENV PATH="$VIRTUAL_ENV/bin:$PATH"
 # Install python packages here.
 RUN pip3 install matplotlib numpy pandas Pyarrow seaborn
 # Create 1000 group and user to avoid permissions issues with local user/group
-# when editing files in and out of docker container
+# when editing files in and out of docker container.
 RUN addgroup --gid 1000 vscode
 RUN adduser --disabled-password --gecos "" --uid 1000 --gid 1000 vscode
 ENV HOME=/home/vscode
