Test GitHub Actions

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
   "name": "example-docker-python-pip",
-  "dockerFile": "Dockerfile",
+  "dockerFile": "../Dockerfile",
   "postCreateCommand": "",
   "customizations": {
     "vscode": {
