--- a/.github/workflows/build-push-docker-image.yaml
+++ b/.github/workflows/build-push-docker-image.yaml
@@ -84,7 +84,7 @@ jobs:
         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
         with:
           context: .
-          push: ${{ github.event_name != 'pull_request' }}
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
